# motor_control_ecu

./: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  arm_gcc_toolchain.cmake  cppcheck-suppressions.txt  doxyfile  get_tools.bat  memory_constraints.json  mingw_toolchain.cmake  misra.json  misra.txt
.ozone/: motor_control_ecu.jdebug
cmake/: analyze.cmake  arm-gcc-toolchain.cmake  arm_gcc_build.cmake  arm_gcc_toolchain.cmake  build_arm_gcc.cmake  build_mingw.cmake  build_options_common.cmake  clang_format.cmake  clang_tidy.cmake  common_build_options.cmake  cppcheck.cmake  doxygen.cmake  lizard.cmake  mingw_build.cmake  test.cmake  toolchain_arm_gcc.cmake  toolchain_mingw.cmake  tools.cmake  unit_test.cmake  version_file_generator.cmake
src/: CMakeLists.txt  memory.ld
src/bsw/: interrupt_vector_table.s  irq_vectors.s  main.c  startup.s
src/bsw/config/: crc_config.c  crc_config.h  scheduler_config.c  scheduler_config.h
src/bsw/crc/: crc.c  crc.h
src/bsw/debouncer/: debouncer.c  debouncer.h
src/bsw/partition_info/: partition_info.c  partition_info.h
src/bsw/timeout/: timeout.c  timeout.h
src/bsw/util/: util.h  util_getter.h  util_mem.c  util_mem.h  util_timestamp.h
src/bsw/util/util/: util.c  util.h
src/bsw/util/util_debouncer/: util_debouncer.c  util_debouncer.h
src/bsw/util/util_getter/: util_getter.h
src/bsw/util/util_mem/: util_mem.c  util_mem.h
src/bsw/util/util_memcpy/: util_memcpy.c  util_memcpy.h
src/bsw/util/util_memset/: util_memset.c  util_memset.h
src/bsw/util/util_semver/: util_semver.h
src/bsw/util/util_timeout/: util_timeout.c  util_timeout.h
src/bsw/util/util_timestamp/: util_timestamp.h
src/bsw/version/: version.c  version.c.in  version.h  version_config.h.in
src/util/: util.c  util.h
test/: CMakeLists.txt
test/src/util/: test_util.c
test/test_util_memcpy/: test_util_memcpy.c
test/test_util_memset/: test_util_memset.c
test/util/: test_util.c
tests/: CMakeLists.txt
